test/CheckError/Move/FinalLvalAssign.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	static create = default;
}

export void f() {
	final auto testInstance = TestClass();
	
	// CHECK: .loci:12:2: error: cannot find method 'assign' for type 'lval(final_lval_t<TestClass>)'
	testInstance = TestClass();
}

// CHECK: 2 errors generated.
